# hey-quant

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
config/: default.yaml
docs/: architecture_and_learning_plan.md  development_workflow.md  docker_deployment.md  milestones.md  strategy_and_report_explainer.md  v1_release_plan.md  windows_handoff.md
scripts/: windows_daily_email_task.xml  windows_docker_auto_update_task.xml  windows_docker_daily_email_task.xml  windows_docker_daily_job.ps1  windows_docker_daily_telegram_task.xml  windows_docker_update.ps1
src/quant_ai_system/: __init__.py  action_summary.py  backtest.py  cli.py  config.py  data_quality.py  emailer.py  engine.py  exit_rules.py  factors.py  indicators.py  interactive_analyst.py  monitor.py  portfolio.py  portfolio_store.py  position_drift.py  quality.py  release.py  report_quality.py  research.py  risk.py  server.py  signals.py  supervisor.py  telegram_commands.py  telegram_notifier.py
src/quant_ai_system/data/: __init__.py  (+1 more)
tests/: test_action_summary.py  test_backtest_report_cli.py  test_data_quality.py  test_emailer.py  test_exit_rules.py  test_factors.py  test_fmp_provider.py  test_indicators_signals.py  test_interactive_analyst.py  test_monitor.py  test_portfolio_risk.py  test_portfolio_store.py  test_position_drift.py  test_release.py  test_report_quality.py  test_research_news.py  test_server.py  test_supervisor.py  test_telegram_commands.py  test_telegram_notifier.py
(+6 files in other folders)
